--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ h2{
       letter-spacing: 3px;
       margin-bottom: 15px;
 }
-.day__input, .month__input, .year__input {
+#day__input, #month__input, #year__input {
    width: 160px;
    height: 70px;
    margin-right: 30px;
@@ -69,7 +69,7 @@ h2{
    border: 2px solid hsl(0, 0%, 86%);
    outline: none;
 }
-.day__input:focus, .month__input:focus, .year__input:focus{
+#day__input:focus, #month__input:focus, #year__input:focus{
    border: 2px solid hsl(259, 100%, 65%);
  
 }
